hphp/hack/test/typecheck/async_function_untyped4.php.exp
File "async_function_untyped4.php", line 8, characters 25-25:
Member f has the wrong type (Typing[4341])
File "async_function_untyped4.php", line 4, characters 24-26:
Expected int
File "async_function_untyped4.php", line 8, characters 25-25:
But got Awaitable<_> (result of 'async function')
